[gd_scene load_steps=5 format=3 uid="uid://c154igygrp5ab"]

[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="1_eq7nq"]
[ext_resource type="Texture2D" uid="uid://cd4jhiu7riw1p" path="res://Art/UI/Menu/start_screen-background.png" id="2_vuujb"]
[ext_resource type="PackedScene" uid="uid://r2wbmt3v5nvl" path="res://Prefabs/UI/FallingSnowMenu.tscn" id="4_dy8iw"]
[ext_resource type="PackedScene" uid="uid://b11tulya8nmav" path="res://Prefabs/UI/VolumeSlider.tscn" id="5_11h5h"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_eq7nq")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Menu" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_vuujb")

[node name="VolumeSlider" parent="." instance=ExtResource("5_11h5h")]
offset_left = -541.0
offset_top = -314.0
offset_right = -541.0
offset_bottom = -314.0
scale = Vector2(2.99718, 1.44171)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 67.5
offset_right = 75.0
offset_bottom = 190.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Settings
"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Quit
"

[node name="Falling Snow" parent="." instance=ExtResource("4_dy8iw")]
position = Vector2(0, -324)
scale = Vector2(1.44, 2.8)

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
